<resources>
    <string name="app_name">Cheqfast</string>
    <string name="entrar">Entrar</string>
    <string name="esqueci_senha">Esqueci minha senha</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="bem_vindo">Seja bem-vindo</string>
    <string name="email">E-mail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="msg_invalid_field">%1$s é inválido</string>
    <string name="msg_required_field">%1$s é obrigatório</string>
    <string name="applicativo">Aplicativo</string>
    <string name="sair">Sair</string>
    <string name="sobre">Sobre</string>
    <string name="processo">Processo</string>
    <string name="pendencia">Pendência</string>
    <string name="novo">Novo</string>
    <string name="consulta">Consulta</string>
    <string name="termo_uso">Termo de uso</string>
    <string name="simulador">Simulador</string>
    <string name="meus_dados">Meus dados</string>
    <string name="recuperar">Recuperar</string>
    <string name="info_recovery">Digite seus dados para receber um e-mail com as instruções para criar uma nova senha</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="cpf">CPF</string>
    <string name="cnpj">CNPJ</string>
    <string name="completa">Completa</string>
    <string name="simplificada">Simplificada</string>
    <string name="consultar">Consultar</string>
    <string name="data_atual">Data atual</string>
    <string name="bom_para">Bom para</string>
    <string name="fator">Fator</string>
    <string name="simular">Simular</string>
    <string name="valor_cheque">Valor do cheque</string>
    <string name="valor_receber">Valor a receber</string>
    <string name="numero_dias">Nº de dias</string>
    <string name="numero">Número</string>
    <string name="periodo_de">Período de</string>
    <string name="periodo_ate">Período até</string>
    <string name="network_not_available">Internet indisponível</string>>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="msg_sair_conta">Deseja sair da conta?</string>
    <string name="senha_recuperada_senha">Senha recuperada com sucesso</string>
    <string name="processo_status_rascunho">Rascunho</string>
    <string name="processo_status_em_analise">Em Análise</string>
    <string name="processo_status_pendente">Pendente</string>
    <string name="processo_status_concluido">Concluído</string>
    <string name="processo_status_cancelado">Cancelado</string>
    <string name="processo_status_aguardando_aprovacao">Aguardando Aprovação</string>
    <string name="processo_status_aguardando_documentos">Aguardando Documentos</string>
    <string name="coleta_status_aguardando_coleta">Aguardando Coleta</string>
    <string name="coleta_status_coletado">Coletado</string>
    <string name="coleta_status_armazenado">Armazenado</string>
    <string name="msg_erro_digitalizacao">Erro na digitalização</string>
    <string name="info_novo_processo">Para iniciar um novo processo, capture os cheques que serão trocados.</string>
    <string name="finalizar_captura">Finalizar captura</string>
    <string name="cheques">Cheques</string>
    <string name="capturar_cheque">Capturar cheque</string>
    <string name="capturar">Capturar</string>
    <string name="finalizar">Finalizar</string>
    <string name="msg_finalizar_sem_cheque">Capture pelo menos 1 cheque</string>
    <string name="confirmacao">Confirmação</string>
    <string name="numero_cheques">Nº de cheques</string>
    <string name="valor_total">Valor total</string>
    <string name="fechar">Fechar</string>
    <string name="confirmar">Confirmar</string>
    <string name="msg_min_size_field">%1$s o tamanho mínimo é %2$d</string>
    <string name="msg_max_size_field">%1$s o tamanho máximo é %2$d</string>
    <string name="sem_registros_exibir">Sem registros para exibir</string>
    <string name="msg_form_invalido">Verifique os campos inválidos ou obrigatórios!</string>
    <string name="documento_status_incluido">Incluido</string>
    <string name="documento_status_pendente">Pendente</string>
    <string name="documento_status_aprovado">Aprovado</string>
    <string name="documento_status_processando">Processando</string>
    <string name="documento_status_digitalizado">Digitalizado</string>
    <string name="documento">Documento</string>
    <string name="tipificacao">Tipificacao</string>
    <string name="erro">Erro</string>
    <string name="enviado">Enviado</string>
    <string name="enviando">Enviando</string>
    <string name="aguardando">Aguardando</string>
    <string name="msg_processo_salvo_sucesso">Processo salvo com sucesso</string>

    <string name="msg_pesquisa_sem_resulta">Você ainda não possui cheques para troca.\n<b>Clique aqui</b> para cadastrar.</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="filtrar">Filtrar</string>
    <string name="status_processo">Status do processo</string>
    <string name="limpar">Limpar</string>
    <string name="coleta_processo">Status da coleta</string>
    <string name="msg_sem_info_digitalizacao">Não há informações de digitalização</string>
    <string name="msg_processo_enviado">Processo enviado com sucesso</string>
    <string name="atualizar">Atualizar</string>
    <string name="ontem">Ontem</string>
    <string name="anteontem">Anteontem</string>
    <string name="data_hora">Data / hora</string>
    <string name="taxa">Taxa</string>
    <string name="valor_liberado">Valor liberado</string>

    <string name="cheque">Cheque</string>
    <string name="detalhe">Detalhe</string>
    <string name="abrir">Abrir</string>
    <string name="data">Data</string>
    <string name="tentativas">Tentativas</string>
    <string name="mensagem">Mensagem</string>
    <string name="reenviar">Reenviar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aprovar">Aprovar</string>
    <string name="msg_aprovar_processo">Deseja aprovar o valor para este lote?</string>
    <string name="msg_cancelar_processo">Deseja cancelar o valor para este lote?</string>
    <string name="justificar">Justificar</string>
    <string name="substituir">Substibuir</string>
    <string name="msg_substituir_cheque">Deseja substituir essa cheque?</string>
    <string name="clique_substituir">Clique para substituir</string>
    <string name="msg_documento_enviado_sucesso">Documento enviado com sucesso</string>
    <string name="msg_documento_reenviado">Documento reenviado com sucesso</string>
    <string name="justificativa">Justificativa</string>
    <string name="msg_justificativa_sucesso">Justificativa enviada com sucesso</string>
    <string name="documento_status_rejeitado">Rejeitado</string>
    <string name="processo_status_em_liberacao">Em Liberação</string>
    <string name="msg_calculo_aproximado">Cáculo aproximado, pode sofrer variações na análise de crédito</string>
    <string name="processo_status_rejeitado">Rejeitado</string>
    <string name="abra_sua_conta">Abra a sua conta</string>
    <string name="abrir_conta">Abrir conta</string>
    <string name="ativo">Ativo</string>
    <string name="inativo">Inativo</string>
    <string name="historico">Histórico</string>
    <string name="transferencia">Transferência</string>
    <string name="msg_custo_transferencia">Custo de R$ %1$s por transferência.</string>
    <string name="adicionar">Adicionar</string>
    <string name="favorecido">Favorecido</string>
    <string name="banco">Banco</string>
    <string name="conta">Conta</string>
    <string name="agencia">Agência</string>
    <string name="titular">Titular</string>
    <string name="trocar_cnpj">Trocar para CNPJ</string>
    <string name="trocar_cpf">Trocar para CPF</string>
    <string name="salvar">Salvar</string>
    <string name="valor">Valor</string>
    <string name="msg_erro_transferencia_invalido">Transferência inválida</string>
    <string name="msg_erro_valor_maior_custo">Valor deve ser maior do que o custo de R$ %1$s da transferência.</string>


</resources>
