<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/filtrar"
        android:padding="@dimen/activity_padding"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@drawable/bg_caption" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <br.com.wasys.gfin.cheqfast.cliente.widget.AppNumberEditText
                    android:id="@+id/edit_numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/numero"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/default_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="8dp">

                    <br.com.wasys.gfin.cheqfast.cliente.widget.AppDateEditText
                        android:id="@+id/edit_inicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/periodo_de"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="8dp">

                    <br.com.wasys.gfin.cheqfast.cliente.widget.AppDateEditText
                        android:id="@+id/edit_termino"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/periodo_ate"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <br.com.wasys.library.widget.AppSpinner
                    android:id="@+id/spinner_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/status_processo"
                    style="@style/AppTheme.EditText" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin">

                <br.com.wasys.library.widget.AppSpinner
                    android:id="@+id/spinner_coleta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/coleta_processo"
                    style="@style/AppTheme.EditText" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_limpar"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/button_filtrar"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/filtrar"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

</LinearLayout>