<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProcessoNovoFragment">

    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/info_novo_processo" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/button_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:visibility="invisible"
        app:menu_labels_ellipsize="end"
        app:menu_labels_singleLine="true"
        app:menu_backgroundColor="#ccffffff">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/button_finalizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_check"
            android:tint="@android:color/white"
            app:fab_colorNormal="@color/green_500"
            app:fab_colorPressed="@color/green_800"
            app:fab_size="mini"
            app:fab_label="@string/finalizar" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/button_capturar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fab_camera"
            android:tint="@android:color/white"
            app:fab_colorNormal="@color/blue_500"
            app:fab_colorPressed="@color/blue_800"
            app:fab_size="mini"
            app:fab_label="@string/capturar" />

    </com.github.clans.fab.FloatingActionMenu>

</FrameLayout>
